turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:46: error: not found: value setPosition
	setPosition(8,33)
        ^